:art: Started using Keystore API instead